[package]
name = "self-referential"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
sqlx = { version = "0.5", features = ["any", "chrono", "macros", "migrate", "runtime-actix-native-tls", "sqlite", "uuid"] }
tokio = { version = "1", features = ["fs", "macros", "rt", "time"] }
