[package]
name = "self-referential"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-rc.3"
env_logger = "0"
futures = "0.3"
sqlx = { version = "0.5", features = ["any", "chrono", "macros", "migrate", "runtime-actix-native-tls", "sqlite", "uuid"] }
tokio = { version = "1", features = ["fs", "macros", "rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
